--- a/style.css
+++ b/style.css
@@ -233,6 +233,7 @@ a {
 .items {
   margin-top: 5rem;
   width: 95%;
+  height: 70%;
   padding: 3rem;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   gap: 2rem;
@@ -265,7 +266,7 @@ a {
     margin-top: 2rem;
     width: 95%;
     padding: 4rem;
-    background: red;
+    height: 60%;
   }
   .main__heading {
     padding-left: 3rem;
@@ -274,6 +275,7 @@ a {
 @media only screen and (max-width: 26.5625em) {
   .items {
     padding: 1rem;
+    height: 60%;
   }
 }
 .item__img {
@@ -370,16 +372,16 @@ a {
 
 @media only screen and (max-width: 56.25em) {
   .description {
-    height: 4rem;
-    background-color: rebeccapurple;
+    margin-top: -2rem;
+    height: 5rem;
   }
 }
 
 @media only screen and (max-width: 26.5625em) {
-  .items {
-    padding: 1rem;
-  }
   .description {
     height: 5rem;
+  }
+  .description::before {
+    top: 4rem;
   }
 }
