--- a/style.css
+++ b/style.css
@@ -223,6 +223,7 @@ a {
   }
   .main__content {
     height: 90%;
+    background: red;
   }
   .main__heading {
     height: 20%;
@@ -233,7 +234,6 @@ a {
 .items {
   margin-top: 5rem;
   width: 95%;
-  height: 50%;
   padding: 3rem;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   gap: 2rem;
